# gpu_raytracer

./: Cargo.toml
src/: main.rs  my3d_lib.rs  obj_parser.rs
src/models/: cornell_box.blend  cornell_box.blend1  cornell_box.glb  cornell_box.mtl  kitchen.glb  low_poly_house.blend  low_poly_house.blend1  low_poly_house.glb  low_poly_room.blend  low_poly_room.blend1  low_poly_room.glb
src/shaders/: common_structs.wgsl  display.wgsl  raytracer.wgsl  wireframe.wgsl
