[package]
name = "gpu_raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
pollster = "0.4.0"
env_logger = "0.11.8"
wasm-bindgen = "0.2.108"
anyhow = "1.0.100"
wasm-bindgen-futures = "0.4.58"
winit = "0.30.12"
console_log = "1.0.0"
log = "0.4.29"
console_error_panic_hook = "0.1.7"
